syntax = "proto3";
package d_store_service;

message GetOrWatchRequest {
	string address = 1;
	fixed64 lifetime_id = 2;
	fixed64 task_id = 3;
	fixed64 object_id = 4;
}

message GetOrWatchResponse {
	bytes object = 1;
}

message ShareNRequest {
	string address = 1;
	fixed64 lifetime_id = 2;
	fixed64 task_id = 3;
	fixed64 object_id = 4;

	fixed64 n = 5;
}

message ShareNResponse {
}

message DecrementOrRemoveRequest {
	string address = 1;
	fixed64 lifetime_id = 2;
	fixed64 task_id = 3;
	fixed64 object_id = 4;

	fixed64 by = 5;
}

message DecrementOrRemoveResponse {
	bool removed = 1;
}

service DStoreService {
	rpc GetOrWatch(GetOrWatchRequest) returns (GetOrWatchResponse);
	rpc ShareN(ShareNRequest) returns (ShareNResponse);
	rpc DecrementOrRemove(DecrementOrRemoveRequest) returns (DecrementOrRemoveResponse);
}
